@@ -155,6 +155,12 @@
             <version>2.0M5</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>commons-httpclient</groupId>
+            <artifactId>commons-httpclient</artifactId>
+            <version>3.1</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 	<build>
@@ -165,11 +171,14 @@
 				<version>3.5.2</version>
 				<extensions>true</extensions>
 				<configuration>
+				    <jvmArgs>-Xmx720m -XX:MaxPermSize=250m</jvmArgs>
 					<systemPropertyVariables>
 						<jira.websudo.is.disabled>true</jira.websudo.is.disabled>
 						<baseurl.jira>http://localhost:2990/jira</baseurl.jira>
 						<http.jira.port>2990</http.jira.port>
 						<context.jira.path>jira</context.jira.path>
+                        <jirabitbucketconnector.password>${jirabitbucketconnector.password}</jirabitbucketconnector.password>
+                        <dvcsconnectortest.password>${dvcsconnectortest.password}</dvcsconnectortest.password>
 					</systemPropertyVariables>
 					<productVersion>${jira.version}</productVersion>
 					<testResourcesVersion>${jira.data.version}</testResourcesVersion>
@@ -219,11 +228,6 @@
 					<target>1.6</target>
 				</configuration>
 			</plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.8</version>
-            </plugin>
 		</plugins>
 	</build>
 
